Try using nomral syntax

--- a/paper.bib
+++ b/paper.bib
@@ -31,7 +31,7 @@
 
 @Booklet{ATLAS-CONF-2018-041,
     author         = "{ATLAS Collaboration}",
-    title          = "{Search for supersymmetry in final states with missing transverse momentum and multiple \(b\)-jets in proton--proton collisions at \(\sqrt{s} = 13\) \(\TeV\) with the ATLAS detector}",
+    title          = "{Search for supersymmetry in final states with missing transverse momentum and multiple $b$-jets in proton--proton collisions at $\sqrt{s} = 13$ $\mathrm{TeV}$ with the ATLAS detector}",
     howpublished   = "{ATLAS-CONF-2018-041}",
     url            = "https://cds.cern.ch/record/2632347",
     year           = "2018",
