Add impact section

--- a/paper.bib
+++ b/paper.bib
@@ -55,3 +55,57 @@
       reportNumber   = "IPPP-17-31",
       SLACcitation   = "%%CITATION = ARXIV:1704.05473;%%"
 }
+
+@booklet{ATL-PHYS-PUB-2019-029,
+      author        = "{ATLAS Collaboration}",
+      title         = "{Reproducing searches for new physics with the ATLAS
+                       experiment through publication of full statistical
+                       likelihoods}",
+      institution   = "CERN",
+      address       = "Geneva",
+      number        = "ATL-PHYS-PUB-2019-029",
+      month         = "Aug",
+      year          = "2019",
+      reportNumber  = "ATL-PHYS-PUB-2019-029",
+      url           = "https://cds.cern.ch/record/2684863",
+}
+
+@article{Abdallah:2020pec,
+      author         = "Abdallah, Waleed and others",
+      title          = "{Reinterpretation of LHC Results for New Physics: Status
+                        and Recommendations after Run 2}",
+      collaboration  = "LHC Reinterpretation Forum",
+      year           = "2020",
+      eprint         = "2003.07868",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "CERN-LPCC-2020-001, FERMILAB-FN-1098-CMS-T,
+                        Imperial/HEP/2020/RIF/01",
+      SLACcitation   = "%%CITATION = ARXIV:2003.07868;%%",
+      journal        = ""
+}
+
+@article{Khosa:2020zar,
+    author = "Khosa, Charanjit K. and Kraml, Sabine and Lessa, Andre and Neuhuber, Philipp and Waltenberger, Wolfgang",
+    title = "{SModelS database update v1.2.3}",
+    eprint = "2005.00555",
+    archivePrefix = "arXiv",
+    primaryClass = "hep-ph",
+    doi = "10.31526/lhep.2020.158",
+    journal = "LHEP",
+    volume = "158",
+    pages = "2020",
+    month = "5",
+    year = "2020"
+}
+
+@article{Alguero:2020grj,
+    author = "Alguero, Gaël and Kraml, Sabine and Waltenberger, Wolfgang",
+    title = "{A SModelS interface for pyhf likelihoods}",
+    eprint = "2009.01809",
+    archivePrefix = "arXiv",
+    primaryClass = "hep-ph",
+    month = "Sep",
+    year = "2020",
+    journal = ""
+}
