Add section on future work

--- a/docs/JOSS/paper.bib
+++ b/docs/JOSS/paper.bib
@@ -109,3 +109,17 @@
     year = "2020",
     journal = ""
 }
+
+@Article{Cowan:2010js,
+   Author = {Cowan, Glen and Cranmer, Kyle and Gross, Eilam and Vitells, Ofer},
+   Eprint = "1007.1727",
+   Archiveprefix = {arXiv},
+   Primaryclass = {physics.data-an},
+   Journal = {Eur. Phys. J. C},
+   Pages = {1554},
+   doi = "10.1140/epjc/s10052-011-1554-0",
+   Title = {{Asymptotic formulae for likelihood-based tests of new physics}},
+   Volume = {71},
+   Year = {2011},
+   Addendum = "Erratum: \href{http://dx.doi.org/10.1140/epjc/s10052-013-2501-z}{Eur. Phys. J. C {\textbf{73}} (2013) 2501}"
+}
