--- a/docs/JOSS/paper.bib
+++ b/docs/JOSS/paper.bib
@@ -56,6 +56,14 @@
       SLACcitation   = "%%CITATION = ARXIV:1704.05473;%%"
 }
 
+@software{pyhf_zenodo,
+  author = "{Heinrich, Lukas and Feickert, Matthew and Stark, Giordon}",
+  title = "{pyhf: v0.5.2}",
+  version = {0.5.2},
+  doi = {10.5281/zenodo.1169739},
+  url = {https://github.com/scikit-hep/pyhf},
+}
+
 @booklet{ATL-PHYS-PUB-2019-029,
       author        = "{ATLAS Collaboration}",
       title         = "{Reproducing searches for new physics with the ATLAS
