--- a/docs/JOSS/paper.bib
+++ b/docs/JOSS/paper.bib
@@ -62,6 +62,7 @@
   version = {0.5.2},
   doi = {10.5281/zenodo.1169739},
   url = {https://github.com/scikit-hep/pyhf},
+  year = {2020}
 }
 
 @booklet{ATL-PHYS-PUB-2019-029,
